GNOME Bugzilla – Bug 794645
Bookmarks lost after upgrade
Last modified: 2018-03-26 05:16:43 UTC
After upgrading to Ephy 3.27.90, and continuing with 3.28.0.1, my bookmarks have disappeared. There is one called "" (U+0003) with a reasonably random seeming link, but maybe I accidentally added that after the upgrade? This also happened from 3.24 to 3.26.
Did you at any point upgrade to an earlier 3.27 release? There was bug #792683, but that was fixed in 3.27.90 and should not have affected you if you upgraded straight from 3.26 to 3.27.90. Any chance you have a backup of your original bookmarks file? To debug, we need to be able to reproduce, that means (a) copy a bookmarks.gvdb that triggers the migration bug into ~/.config/epiphany, (b) delete ~/.config/epiphany/.migrated, (c) start epiphany from the command line so that we can see if there are any warnings or criticals during the migration. If you've got a bookmarks file that triggers the issue, or are able to figure out how to trigger it otherwise, then that would be great.
Hm, I can reproduce a problem using an old bookmarks.gvdb from one of my backups: $ flatpak run org.gnome.Epiphany (ephy-profile-migrator:7): GLib-CRITICAL **: 15:38:59.163: the GVariant format string '(x&s&sxbas)' has a type of '(xssxbas)' but the given value has a type of '(xssdbas)' (ephy-profile-migrator:7): GLib-CRITICAL **: 15:38:59.163: g_variant_get: assertion 'valid_format_string (format_string, TRUE, value)' failed Failed to run the migrator process, Web will now abort. But this doesn't cause any bookmarks to be deleted, it instead causes epiphany to crash on start. So the bug I'm looking at seems different from yours.
In my case, the problem is caused by migrator 17, the search engines migrator. It tries to convert old smart bookmarks to search engines, but this blows up because we are only partway through the bookmarks migration (migrators #12 and #24). In effect, migrator 17 now depends on migrator 24 running first. I'm not sure, but maybe we can move it to later in the migration. I think your problem must be different, though.
(In reply to Michael Catanzaro from comment #1) > Did you at any point upgrade to an earlier 3.27 release? There was bug > #792683, but that was fixed in 3.27.90 and should not have affected you if > you upgraded straight from 3.26 to 3.27.90. Ah wait, I missed the 3.26 branch history here. That migrator was backported to 3.26... which I think I'll never allow again, that turned out to be a big mistake. So that bug explains how you lost your bookmarks during the 3.24 -> 3.26 migration. Still doesn't explain what happened to you during the 3.26 -> 3.28 migration, though.
The following fixes have been pushed: 873f445 Reorder search engines migrator to ensure it does not fail 4d78f0d Always run profile migrator from source root in developer mode
Created attachment 370125 [details] [review] Reorder search engines migrator to ensure it does not fail The search engines migrator relies on EphyBookmarksManager, so we need to move it after the bookmarks timestamp migrator or it will fail. This fixes upgrades from old (pre-3.24) versions of Epiphany.
Created attachment 370126 [details] [review] Always run profile migrator from source root in developer mode
I've fixed the only problem I could find, but I'm pretty sure whatever you hit was a different issue. So if you're able to find a way to reproduce, please to reopen.
(In reply to Michael Catanzaro from comment #8) > I've fixed the only problem I could find, but I'm pretty sure whatever you > hit was a different issue. So if you're able to find a way to reproduce, > please to reopen. I don't have a backup, so yeah I guess that will have to do. Thanks for looking into it. Apologies for the late reply, was out over the weekend.