Reorder search engines migrator to ensure it does not fail

The search engines migrator relies on EphyBookmarksManager, so we need
to move it after the bookmarks timestamp migrator or it will fail. This
fixes upgrades from old (pre-3.24) versions of Epiphany.

https://bugzilla.gnome.org/show_bug.cgi?id=794645